--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -39,6 +39,8 @@ import { SITE_TITLE, SITE_DESCRIPTION, OG_IMAGE } from "../consts";
 <meta name="title" content={SITE_TITLE} />
 <meta name="description" content={SITE_DESCRIPTION} />
 
+<meta name="keywords" content="commercial cleaning, office cleaning, London, services, company, professional, specialist, best, commercial/office cleaning services, London, corporate office buildings, cleaning services, London small offices, cleaning services, London medical and dental offices, cleaning services, London architects offices, cleaning services, London media agencies and designers offices, cleaning services, London legal practices, cleaning services, London technology companies, cleaning services, London financial service companies, cleaning services, London">
+
 <link rel="canonical" href={canonicalURL} />
 
 <meta property="og:type" content="website" />
