--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -5,6 +5,7 @@ import Header from "../../components/Header.astro";
 import BaseHead from "../../components/BaseHead.astro";
 import Footer from "../../components/Footer.astro";
 import ContactSection from "../../components/ContactSection.astro"
+import ButtonContainer from "../../components/ButtonContainer.astro";
 
 const { description } = Astro.props;
 ---
@@ -35,6 +36,8 @@ const { description } = Astro.props;
     
                         <p>What’s more, we have a proactive onsite supervisor team to oversee our cleaning team, and to ensure cleaning remains at a high standard.</p>
 
+                        <ButtonContainer />
+
                         <ul class="bullets">
                             <li>
                                 <span class="icon floor"></span>
@@ -61,6 +64,8 @@ const { description } = Astro.props;
                                 Waste Management
                             </li>
                         </ul>
+
+                        <a href="/jobs/">Work with us</a>
                     </div>
 
                     <div class="image reveal">
@@ -118,6 +123,17 @@ const { description } = Astro.props;
         /* margin-bottom: 0.9rem; */
     }
 
+    .content a {
+        background-color: var(--light-a);
+        padding: 1.2rem 1.8rem;
+        width: fit-content;
+        border-radius: 0.3rem;
+        font-size: clamp(1.5rem,5vmin,1.9rem);
+        font-weight: 500;
+        color: var(--primary-a);
+        border: 0.1rem solid var(--light-b);
+    }
+
     .bullets {
         list-style: none;
         padding: 0;
@@ -168,7 +184,7 @@ const { description } = Astro.props;
         width:100%;
         height:clamp(30rem, 38vmin, 50rem);
         background-image: url('/images/office02.jpg');
-        background-image: image-set(url('/images/office02.jpg') , url('/images/office02.jpg') );
+        background-image: image-set(url('/images/office02.jpg') , url('/images/office02.webp') );
         background-size: cover;
         background-position: center;
     }
