--- a/src/pages/locations/index.astro
+++ b/src/pages/locations/index.astro
@@ -109,9 +109,9 @@ const { description } = Astro.props;
         z-index: 3;
     }
 
-    .heading_ctnr {
+    /* .heading_ctnr {
         padding-bottom: unset;
-    }
+    } */
 
     @media screen and (min-width:850px) {
         .map {
