--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
 import Layout from "../layouts/HomeLayout.astro";
-// import Stripe from "../components/Stripe.astro";
+// import MapSwitch from "../components/MapSwitch.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import ContactSection from "../components/ContactSection.astro"
 import ContactBox from "../components/ContactBox.astro";
-import MapSwitch from "../components/MapSwitch.astro";
+import ButtonContainer from "../components/ButtonContainer.astro";
 
 import { Schema } from "astro-seo-schema"
 
@@ -23,28 +23,11 @@ const testimonials = await getCollection("testimonials");
 		<section class="intro default_bg">
 			<div class="ctnr">
 				<div class="content reveal">
-					<h1>Commercial and Office Cleaning Services</h1>
+					<h1>Commercial & Office Cleaning in London</h1>
 
-					<h2>
-						The proof is in our numbers. We clean over 500 offices
-						each day with our office cleaning services. 95% of our
-						clients choose to stay with us at the end of their
-						contract.
-					</h2>
+					<h2>Welcome to <strong>The Clean Network</strong> - trusted by over 500 offices in London each day. Discover the difference our professional office cleaning services can make. Why do 95% of our clients renew their contracts with us? Let us show you.</h2>
 
-					<div class="bt_ctnr flex">
-						<div class="ctas flex">
-							<a href="/services/" class="know_our_services">Find out more</a>
-
-							<a href="#contact" class="quote">Get a Quote</a>
-						</div>
-
-						<div class="flex column">
-							<a href="tel:+44-020-3411-0275"><span>London:</span> 020 3411 0275</a>
-
-							<!-- <a href="tel:+44-0121-3927529"><span>Birmingham:</span> 0121 3927529</a> -->
-						</div>
-					</div>
+					<ButtonContainer />
 				</div>
 
 				<div class="showcase reveal">
@@ -58,13 +41,7 @@ const testimonials = await getCollection("testimonials");
 
 			<div class="text_block reveal">
 				<div class="ctnr">
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit.
-						Nisi blanditiis quasi cum culpa, odit ipsam aliquid
-						quibusdam temporibus! Cupiditate voluptatum maiores
-						explicabo hic officia libero. Quam alias dolorem nostrum
-						reprehenderit.
-					</p>
+					<p>We're more than a cleaning company. We're your partners in creating a clean, healthy, and productive work environment. Our professional team caters to various sectors in London, ensuring your specific needs are met with meticulous attention to detail, unmatched reliability, and high industry standards. Experience the professionalism that keeps our clients coming back.</p>
 				</div>
 			</div>
 		</section>
@@ -98,7 +75,7 @@ const testimonials = await getCollection("testimonials");
 				<div class="content reveal">
 					<h3>Services</h3>
 
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam laborum vel rerum eligendi sunt illum harum id, qui ullam.</p>
+					<p>At The Clean Network, we offer a comprehensive range of services. From offices to commercial spaces, our team is equipped with the latest technology and training to deliver impeccable results. Explore our services:</p>
 
 					<a href="/services/" class="cta"><span></span> All services</a>
 
@@ -164,7 +141,7 @@ const testimonials = await getCollection("testimonials");
 				<div class="content reveal">
 					<h3>Sectors</h3>
 
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam laborum vel rerum eligendi sunt illum harum id, qui ullam.</p>
+					<p>We understand that each sector has unique needs. That's why we specialise in providing tailored cleaning solutions to various sectors such as:</p>
 
 					<a href="/sectors/" class="cta"><span></span> All sectors</a>
 
@@ -202,7 +179,7 @@ const testimonials = await getCollection("testimonials");
 				<div class="content reveal">
 					<h3>Locations</h3>
 
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque consequuntur autem natus, quod deleniti velit esse itaque odit quis expedita.</p>
+					<p>Centrally located in the City of London, we're just a call away from providing your space with the professional cleaning service it deserves. We’d be happy to come over and provide you with a quote. Or feel free to drop by our office too.</p>
 
 					<a href="/locations/" class="cta"><span></span> Our Locations</a>
 				</div>
@@ -320,7 +297,7 @@ const testimonials = await getCollection("testimonials");
 				<div class="content reveal">
 					<h3>Find us</h3>
 
-					<p>We’re based in the City of London, so if you’d like us to pop over and give you a quote contact us using our details below. You’re also more than welcome to drop by our office too of course.</p>
+					<p>You'll find us right at the heart of the city, ready to serve the vibrant London community. Our location:</p>
 
 					<div class="flex column">
 						<address><strong>London</strong>: 6-8 Knights Court, London, EC1M 4NH</address>
@@ -375,69 +352,8 @@ const testimonials = await getCollection("testimonials");
 
 	.intro h2 {
 		font-size: clamp(1rem, 3.9vmin, 2.2rem);
-		font-weight: 600;
-		line-height: 1.5;
-	}
-
-	.intro .bt_ctnr {
-		flex-direction: column;
-    	gap: 1.6rem;
-	}
-
-	.intro .ctas {
-		gap: 1.4rem;
-		color: var(--light);
 		font-weight: 500;
-		font-size: clamp(1.3rem,4vmin,1.8rem);
-		line-height: 1;
-		margin-top: 0.5rem;
-		letter-spacing: 0.04rem;
-	}
-
-	.ctas a {
-		border-radius: 0.4rem;
-		padding: 1.4rem 2rem;
-		border: 0.2rem solid var(--light);
-    	box-shadow: inset 0 -1.2rem 1.5rem -1.5rem, 0 0.8rem 1rem -0.6rem var(--light-b);
-		transition: filter 0.5s ease;
-		text-shadow: 0 0.2rem 0rem rgb(47 54 60 / 38%);
-	}
-
-	.ctas a:hover {
-		filter:brightness(1.1);
-		transition: filter 0.1s ease;
-	}
-
-	.intro .bt_ctnr .flex.column {
-    	gap: 0.2rem;
-		font-weight: 600;
-    	font-size: clamp(1.2rem,3.8vmin,1.6rem);
-    	width: fit-content;
-	}
-
-	.intro .bt_ctnr .flex.column a {
-		line-height: 1;
-		padding: 0.5rem;
-		transition: opacity 0.4s ease;
-    	width: fit-content;
-	}
-
-	.intro .bt_ctnr .flex.column a:hover {
-		opacity: 0.7;
-		transition: opacity 0s ease;
-	}
-
-	.intro .bt_ctnr .flex.column span {
-		color: var(--primary-a);
-		font-weight: 600;
-	}
-
-	.ctas .know_our_services {
-		background-color: var(--primary-a);
-	}
-
-	.ctas .quote {
-		background-color: var(--highlight);
+		line-height: 1.5;
 	}
 
 	.showcase {
@@ -464,6 +380,20 @@ const testimonials = await getCollection("testimonials");
 		background-repeat: no-repeat;
 	}
 
+	.panel .cta {
+		font-size: clamp(1.3rem,5vmin,2.2rem);
+		font-weight: 500;
+		letter-spacing: 0.05rem;
+		width: fit-content;
+		text-underline-offset: 0.7rem;
+		line-height: 1.3;
+	}
+
+	.panel .cta:hover {
+		text-decoration: underline 0.2rem rgb(102 118 135 / 30%);
+	}
+
+
 	.intro .text_block {
 		background-color: var(--highlight);
 		padding: clamp(3rem, 10vmin, 6rem) 0;
@@ -478,10 +408,10 @@ const testimonials = await getCollection("testimonials");
 
 	.intro .text_block p {
 		text-align: center;
-    	max-width: 100rem;
+		max-width: 120rem;
 		margin-inline: auto;
 		line-height: 1.6;
-    	font-weight: 500;
+		font-weight: 400;
 	}
 
 	section.clients {
