--- a/src/styles/subpages.css
+++ b/src/styles/subpages.css
@@ -60,8 +60,7 @@ h2::after {
     color: var(--grey);
     font-weight: 400;
     line-height: 1.4;
-    font-style: italic;
-    margin: 0.5rem 0 1.4rem;
+    margin: 0.4rem 0 1.6rem;
 }
  
 .panel .content .description {
@@ -70,7 +69,7 @@ h2::after {
     line-height: 1.4;
 }
 
-.panel .cta {
+.division .cta {
     font-weight: 600;
     letter-spacing: 0;
     font-size: clamp(1.3rem,5vmin,2.1rem);
