--- a/src/pages/jobs/index.astro
+++ b/src/pages/jobs/index.astro
@@ -23,7 +23,7 @@ import { Schema } from "astro-seo-schema"
 
             <section class="contact default_bg" id="contact">
                 <div class="ctnr">
-                    <form name="contact" method="POST" data-netlify="true">
+                    <form name="job-application" method="POST" data-netlify="true">
                         <h1 class="title">Work with us</h1>
 
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa eveniet ab pariatur obcaecati dolores, ipsum maxime inventore officia explicabo quibusdam saepe.</p>
