--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,7 +26,7 @@ import ContactBox from "./ContactBox.astro";
             <a href="/sectors/"><span></span>Sectors</a>
             <a href="/locations/"><span></span>Locations</a>
             <a href="/about/"><span></span>About</a>
-            <a href="/contact/"><span></span>contact</a>
+            <a href="/contact/"><span></span>Contact</a>
         </nav>
 
         <div>
