--- a/src/pages/jobs/index.astro
+++ b/src/pages/jobs/index.astro
@@ -13,20 +13,33 @@ import { Schema } from "astro-seo-schema"
 
 <html lang="en">
     <head>
-        <BaseHead title="Work With Us · The Clean Network" description={description} />
+        <BaseHead title="Office Cleaning Jobs in London - The Clean Network" description="Looking for office cleaning jobs in London? Join The Clean Network, London's leading commercial cleaning company. Explore our job opportunities near you. Apply now!" />
     </head>
 
     <body>
         <Header />
 
         <main>
+            <section class="intro">
+                <div class="ctnr">
+                    <h1>Office Cleaning Jobs</h1>
+
+                    <p>If you're seeking a rewarding career in commercial cleaning, you're in the right place. <strong>Based in London, we're proud to offer a range of job opportunities in office cleaning, right in your area.</strong></p>
+
+                    <p>At <strong>The Clean Network</strong>, we firmly believe that our team is our strength, and we're always on the lookout for dedicated individuals who share our <b>commitment to cleanliness, professionalism, and customer service.</b> As part of our team, you'll have the opportunity to work across various sectors in the city, from corporate offices to tech companies, and from legal practices to design studios. This variety ensures every day offers something different.</p>
+
+                    <p><strong>We're proud to offer competitive compensation, flexible scheduling, comprehensive training, and a supportive work environment.</strong> Whether you're an experienced cleaner looking for a new challenge or someone interested in starting a new career in commercial cleaning, we have a place for you.</p>
+
+                    <p><b class="highlight">Start your journey with us today.</b> Explore our office cleaning jobs in London and apply to become part of London's leading commercial cleaning company. We look forward to welcoming you to our network where high standards, reliability, and trust form the backbone of our success.</p>
+
+                    <p><b>To apply, please fill out the form below.</b> We can't wait to learn more about you!</p>
+                </div>
+            </section>
 
             <section class="contact default_bg" id="contact">
                 <div class="ctnr">
                     <form name="job-application" method="POST" data-netlify="true">
-                        <h1 class="title">Work with us</h1>
-
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa eveniet ab pariatur obcaecati dolores, ipsum maxime inventore officia explicabo quibusdam saepe.</p>
+                        <!-- <h2 class="title">Work with us</h2> -->
             
                         <div class="flex">
                             <p>
@@ -47,7 +60,7 @@ import { Schema } from "astro-seo-schema"
                         </p>
             
                         <p>
-                            <button type="submit" aria-label="Submit contact form">Request a quote</button>
+                            <button type="submit" aria-label="Submit contact form">Apply for Clean Network</button>
                                     
                             <noscript>You need to enable JavaScript on your browser to submit emails.</noscript>
                         </p>
@@ -92,3 +105,45 @@ import { Schema } from "astro-seo-schema"
         />
     </body>
 </html>
+
+<style>
+    main section {
+
+    }
+
+    .intro > .ctnr {
+        width: clamp(9rem, 85vw, 80rem);
+        display: block;
+        margin-inline: auto;
+        padding: clamp(4rem, 9vw, 6rem) 0;
+    }
+
+    h1 {
+        font-size: clamp(1rem,8vmin,5rem);
+        font-weight: 700;
+        line-height: 1.2;
+        margin-bottom: 2rem;
+        color: var(--highlight);
+    }
+
+    .intro p {
+        line-height: 1.5;
+        font-size: clamp(1.5rem,4vmin,1.8rem);
+        color: var(--grey);
+        margin-bottom: 1.6rem;
+    }
+
+    .intro p b, .intro p strong {
+        font-weight: 500;
+    }
+
+    .intro p .highlight {
+        font-weight: 600;
+        color: var(--highlight);
+    }
+
+    @media screen and (min-width:850px) {
+        
+    }
+
+</style>
