--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -34,7 +34,7 @@ import { Schema } from "astro-seo-schema"
 
 <html lang="en">
     <head>
-        <BaseHead title="Our Services · The Clean Network" description={description} />
+        <BaseHead title="Commercial & Office Cleaning Services in London" description="Explore a wide range of professional commercial and office cleaning services by The Clean Network. Tailored solutions to meet your specific cleaning needs in London." />
     </head>
 
     <body>
@@ -44,31 +44,33 @@ import { Schema } from "astro-seo-schema"
         <main>
             <div class="ctnr">
                 <div class="heading_ctnr default_bg">
-                    <h1>Our Services</h1>
+                    <h1>Commercial & Office Cleaning Services</h1>
 
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam laborum vel rerum eligendi sunt illum harum id, qui ullam.</p>
+					<p>Discover the breadth and depth of our cleaning expertise at The Clean Network. We offer a comprehensive range of interior and exterior commercial and office cleaning services in London, tailor-made to meet your unique needs and exceed your expectations.</p>
                 </div>
                 
                 <div class="division" id="indoor">
-                    <h2>Indoor cleaning</h2>
+                    <h2>Interior Cleaning Services</h2>
 
-                    <p>Achieve spotless floors with our professional cleaning services. Our experts use top-notch equipment and eco-friendly products for deep cleaning and restoration.</p>
+                    <p>Our interior cleaning services are meticulously designed to ensure a clean, hygienic, and productive workspace.</p>
 
                     <div class="flex">
                         {
                             services.map((services) => (
                                 <>
                                 {services.data.type === "indoor" ? (
-                                <section class="panel reveal">
+                                <section class="panel reveal" id={(services.data.title).toLowerCase().replace(/\s+/g, '-')}>
                                         <div class="ctnr">
                                             <div class="content">
                                                 <h3>
-                                                    {services.data.title}
+                                                    <a href={`/services/${services.slug}`} aria-label={`Read more about ${services.data.title}`}>
+                                                        {services.data.title}
+                                                    </a>
                                                 </h3>
     
                                                 <p class="description">{services.data.description}</p>
     
-                                                <a href={`/services/${services.slug}`} class="cta" aria-label={`Read more about ${services.data.title}`}><span></span> About <span class="lowercase">{services.data.title} {String(services.data.title).includes('Cleaning') ? "" : "Cleaning"} Service</span></a>
+                                                <a href={`/services/${services.slug}`} class="cta" aria-label={`Read more about ${services.data.title}`}><span></span> More about <span class="lowercase">{services.data.title} {String(services.data.title).includes('Cleaning') ? "" : "Cleaning"} Services</span></a>
 
                                                 <a href="/contact/" class="quote" aria-label="Get a free quote for our cleaning services">Get a free quote</a>
                                             </div>
@@ -89,16 +91,16 @@ import { Schema } from "astro-seo-schema"
                 <hr>
                 
                 <div class="division" id="external">
-                    <h2>External cleaning</h2>
+                    <h2>Exterior Cleaning Services</h2>
 
-                    <p>Achieve spotless floors with our professional cleaning services. Our experts use top-notch equipment and eco-friendly products for deep cleaning and restoration.</p>
+                    <p>We extend our cleaning expertise beyond your building's interior.</p>
 
                     <div class="flex">
                         {
                             services.map((services) => (
                                 <>
                                 {services.data.type === "external" ? (
-                                <section class="panel reveal">
+                                <section class="panel reveal" id={(services.data.title).toLowerCase().replace(/\s+/g, '-')}>
                                         <div class="ctnr">
                                             <div class="content">
                                                 <h3>
