--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -27,7 +27,7 @@
 
     .title + p {
         text-align: center;
-        margin-bottom: 3rem;
+        margin: 0 auto 3rem;
         line-height: 1.5;
         font-size: clamp(1.4rem,3.5vmin,1.7rem);
         color: var(--grey);
