--- a/src/styles/posts.css
+++ b/src/styles/posts.css
@@ -8,23 +8,40 @@
 
 .intro .cover {
     width: 100%;
-    height: clamp(5rem,38vmin,14rem);
-    background-position: 24% center;
+    height: clamp(5rem,85vmin,50rem);
+    background-position: bottom center;
     background-repeat: no-repeat;
     background-size: cover;
-    /* background-attachment: fixed; */
-    margin-bottom: clamp(2rem,6vmin,5rem);
+    background-attachment: fixed;
+    /* margin-bottom: clamp(2rem,6vmin,5rem); */
     background-color: var(--light-a);
 }
 
-.intro .content, article {
+.intro .content {
+    width: clamp(9rem, 85vw, 90rem);
+    margin-inline: auto;
+}
+
+article {
     width: clamp(9rem, 85vw, 80rem);
     margin-inline: auto;
 }
 
 .intro h1 {
-    font-size: clamp(2rem,9vw,5rem);
-    margin-bottom: 0.6rem;
+    font-size: clamp(2rem,8vw,5rem);
+    margin-bottom: -4rem;
+    /* margin-top: -13%; */
+    background-color: rgb(248 248 255 / 80%);
+    text-align: center;
+    border-radius: 0.6rem;
+    padding: 1rem 3rem;
+    backdrop-filter: blur(0.4rem);
+    color: var(--dark-a);
+    transform: translateY(-80%);
+    border: 0.2rem solid var(--light-a);
+    line-height: 1;
+    width: fit-content;
+    margin-inline:auto;
 }
 
 .intro p {
@@ -33,6 +50,7 @@
     line-height: 1.5;
     color: var(--grey);
     /* text-align: justify; */
+    text-align: center;
 }
 
 .intro hr {
@@ -41,6 +59,36 @@
     margin-block: clamp(2rem,6vmin,3rem);
     height: 0.1rem;
     background-color: var(--light-a);
+}
+
+.intro .back {
+    position: absolute;
+    left: 0;
+    top: 2rem;
+    background-color: var(--light-a);
+    padding: 1rem 1.4rem 1rem 2rem;
+    font-size: clamp(1.4rem, 5vw, 1.6rem);
+    font-weight: 500;
+    border-radius: 0 0.3rem 0.3rem 0;
+    border: 0.2rem solid var(--light);
+    border-left: unset;
+    box-shadow: 0 1.1rem 1rem -1rem rgb(102 118 135 / 40%);
+    transition: background-color 0.4s ease;
+    -webkit-transition: background-color 0.4s ease;
+    -moz-transition: background-color 0.4s ease;
+    -ms-transition: background-color 0.4s ease;
+    -o-transition: background-color 0.4s ease;
+    background-color: rgb(248 248 255 / 80%);
+    color: var(--dark-a);
+}
+
+.intro .back:hover {
+    background-color: var(--light);
+    transition: background-color 0.1s ease;
+    -webkit-transition: background-color 0.1s ease;
+    -moz-transition: background-color 0.1s ease;
+    -ms-transition: background-color 0.1s ease;
+    -o-transition: background-color 0.1s ease;
 }
 
 article {
